# XboxUnattend

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
CMake/: Compiler.cmake  Config.cmake
CMake/Scripts/: Deploy.cmake
Src/: Main.cpp  UnattendedUtilities.h
